--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -274,7 +274,7 @@
                 {%- endif -%}
                 {% comment %}theme-check-enable ImgLazyLoading{% endcomment %}
 
-                {%- if card_product.media[1] != null and show_secondary_image -%}
+                {%- if show_secondary_image -%}
                   {% assign videos = card_product.media[1] | where: 'media_type', 'video' %}
                   {% if videos.size > 0 %}
                     <div
