--- a/assets/custom-related-products.css
+++ b/assets/custom-related-products.css
@@ -7,15 +7,9 @@
   margin-bottom: 45px;
 }
 
-.related-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 30px;
-}
+.related-container {}
 
-.related-container.desktop {
-  overflow-x: auto;
-}
+.related-container.desktop {}
 
 /* width */
 .related-container.desktop::-webkit-scrollbar {
@@ -152,8 +146,10 @@
 
 div.swiper-button-next,
 div.swiper-button-prev {
-  display: none !important;
+  /* display: none !important; */
 }
+
+div.swiper-button-next {}
 
 @media screen and (max-width: 750px) {
   span.swiper-pagination-bullet {
