--- a/snippets/custom-related-products.liquid
+++ b/snippets/custom-related-products.liquid
@@ -84,6 +84,13 @@
       nextEl: '.swiper-button-next',
       prevEl: '.swiper-button-prev',
     },
+    {% comment %} breakpoints: {
+      // when window width is >= 480px
+      480: {
+        slidesPerView: 2,
+        spaceBetween: 10,
+      },
+    }, {% endcomment %}
   });
 </script>
 
