--- a/assets/custom-related-products.css
+++ b/assets/custom-related-products.css
@@ -84,7 +84,7 @@
 
 .swiper {
   width: 100%;
-  height: 350px;
+  /* height: 350px; */
 }
 
 .swiper-slide {
@@ -114,6 +114,15 @@
   bottom: 0px;
   top: initial;
 }
+
+.custom-swiper .swiper-button-next,
+.custom-swiper .swiper-button-prev {
+  display: block !important;
+  bottom: initial !important;
+  top: calc(50% - 22px);
+  position: absolute !important;
+}
+
 
 .swiper-button-next::after,
 .swiper-button-prev::after {
