--- a/assets/custom-related-products.css
+++ b/assets/custom-related-products.css
@@ -117,10 +117,7 @@
 
 .custom-swiper .swiper-button-next,
 .custom-swiper .swiper-button-prev {
-  display: block !important;
-  bottom: initial !important;
-  top: calc(50% - 22px);
-  position: absolute !important;
+  display: none !important
 }
 
 
