--- a/assets/base.css
+++ b/assets/base.css
@@ -2918,6 +2918,8 @@ details[open]>.header__submenu {
   color: rgb(var(--color-foreground));
 }
 
+.header__menu-item a { text-decoration: none; }
+
 .header__menu-item span {
   transition: text-decoration var(--duration-short) ease;
   font: normal normal 600 15px/19px Montserrat;
