--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -16,7 +16,7 @@
                 id="HeaderMenu-{{ link.handle }}"
                 class="header__menu-item list-menu__item link focus-inset"
               >
-                <a href="{{ link.handle }}">
+                <a href="{{ link.url }}">
                   {% assign booColor = false %}
                   {% for promo in shop.metaobjects.menu_colors.values %}
                     {% assign promoText = promo.title | downcase | replace: ' ', '' %}
