--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -2015,3 +2015,25 @@ variant-radios .product-form__input {
     margin-bottom: 0px;
   }
 }
+
+.product__media-wrapper .product--metafield--tag {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 10000000;
+}
+
+
+@media screen and (max-width: 800px) {
+  .product__column-sticky {
+    position: relative;
+  }
+
+  .product__media-wrapper .product--metafield--tag {
+    right: 30px;
+    width: 50px;
+    height: 50px;
+  }
+}
