--- a/sections/locations.liquid
+++ b/sections/locations.liquid
@@ -8,22 +8,27 @@
     <div class="locations-container">
       {% for location in section.blocks %}
         <div class="location">
-          <?xml version="1.0" ?><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:none;}</style></defs><title/><g data-name="Layer 2" id="Layer_2"><path d="M24,29H8a3,3,0,0,1-3-3V16a1,1,0,0,1,2,0V26a1,1,0,0,0,1,1H24a1,1,0,0,0,1-1V16a1,1,0,0,1,2,0V26A3,3,0,0,1,24,29Z"/><path d="M15,29H10a1,1,0,0,1-1-1V22a3,3,0,0,1,3-3h1a3,3,0,0,1,3,3v6A1,1,0,0,1,15,29Zm-4-2h3V22a1,1,0,0,0-1-1H12a1,1,0,0,0-1,1Z"/><path d="M25,17a4,4,0,0,1-4-4,1,1,0,0,1,2,0,2,2,0,0,0,4,0v-.76L24.38,7H7.62L5,12.24V13a2,2,0,0,0,4,0,1,1,0,0,1,2,0,4,4,0,0,1-8,0V12a1,1,0,0,1,.11-.45l3-6A1,1,0,0,1,7,5H25a1,1,0,0,1,.89.55l3,6A1,1,0,0,1,29,12v1A4,4,0,0,1,25,17Z"/><path d="M13,17a4,4,0,0,1-4-4,1,1,0,0,1,2,0,2,2,0,0,0,4,0,1,1,0,0,1,2,0A4,4,0,0,1,13,17Z"/><path d="M19,17a4,4,0,0,1-4-4,1,1,0,0,1,2,0,2,2,0,0,0,4,0,1,1,0,0,1,2,0A4,4,0,0,1,19,17Z"/><path d="M22,22H19a1,1,0,0,1,0-2h3a1,1,0,0,1,0,2Z"/></g><g id="frame"><rect class="cls-1" height="32" width="32"/></g></svg>
-          {% if location.settings.location != blank %}
-            <p class="location_title">{{ location.settings.location }}</p>
-          {% endif %} 
-          {% if location.settings.schedule != blank %}
-            <div class="location_schedule">{{ location.settings.schedule }}</div>
-          {% endif %} 
-          {% if location.settings.address != blank %}
-            <div class="location_address">{{ location.settings.address }}</div>
-          {% endif %} 
-          {% if location.settings.btn_label != blank %}
-            <a href="{{ location.settings.btn_url }}" class="location_btn">
-              
-              <span>{{ location.settings.btn_label }}</span>
-            </a>
-          {% endif %} 
+          <div>
+            <?xml version="1.0" ?><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:none;}</style></defs><title/><g data-name="Layer 2" id="Layer_2"><path d="M24,29H8a3,3,0,0,1-3-3V16a1,1,0,0,1,2,0V26a1,1,0,0,0,1,1H24a1,1,0,0,0,1-1V16a1,1,0,0,1,2,0V26A3,3,0,0,1,24,29Z"/><path d="M15,29H10a1,1,0,0,1-1-1V22a3,3,0,0,1,3-3h1a3,3,0,0,1,3,3v6A1,1,0,0,1,15,29Zm-4-2h3V22a1,1,0,0,0-1-1H12a1,1,0,0,0-1,1Z"/><path d="M25,17a4,4,0,0,1-4-4,1,1,0,0,1,2,0,2,2,0,0,0,4,0v-.76L24.38,7H7.62L5,12.24V13a2,2,0,0,0,4,0,1,1,0,0,1,2,0,4,4,0,0,1-8,0V12a1,1,0,0,1,.11-.45l3-6A1,1,0,0,1,7,5H25a1,1,0,0,1,.89.55l3,6A1,1,0,0,1,29,12v1A4,4,0,0,1,25,17Z"/><path d="M13,17a4,4,0,0,1-4-4,1,1,0,0,1,2,0,2,2,0,0,0,4,0,1,1,0,0,1,2,0A4,4,0,0,1,13,17Z"/><path d="M19,17a4,4,0,0,1-4-4,1,1,0,0,1,2,0,2,2,0,0,0,4,0,1,1,0,0,1,2,0A4,4,0,0,1,19,17Z"/><path d="M22,22H19a1,1,0,0,1,0-2h3a1,1,0,0,1,0,2Z"/></g><g id="frame"><rect class="cls-1" height="32" width="32"/></g></svg>
+            {% if location.settings.location != blank %}
+              <div class="location_title">{{ location.settings.location }}</div>
+            {% endif %} 
+            {% if location.settings.schedule != blank %}
+              <div class="location_schedule">{{ location.settings.schedule }}</div>
+            {% endif %}
+            <div class="location_spacer"></div>
+            {% if location.settings.address != blank %}
+              <div class="location_address">{{ location.settings.address }}</div>
+            {% endif %} 
+          </div>
+            {% if location.settings.btn_label != blank %}
+              <div class="location_btn">
+                <a href="{{ location.settings.btn_url }}" class="location_btn">
+                  
+                  <span>{{ location.settings.btn_label }}</span>
+                </a>
+              </div>
+            {% endif %} 
         </div>
       {% endfor %}
     </div>
@@ -33,7 +38,6 @@
 {% schema %}
 {
   "name": "Locations",
-  "max_blocks": 4,
   "class": "locations-section", 
   "settings": [
     {
