--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -5,11 +5,19 @@
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
     padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
   }
+  .section-{{ section.id }}-padding h2,
+  .section-{{ section.id }}-padding p,
+  .section-{{ section.id }}-padding a{ color: {{ section.settings.color_text }}; }
 
   @media screen and (min-width: 750px) {
     .section-{{ section.id }}-padding {
       padding-top: {{ section.settings.padding_top }}px;
       padding-bottom: {{ section.settings.padding_bottom }}px;
+    }
+  }
+  @media screen and (max-width: 750px) {
+    .rich-text__heading{
+      font-size: 30px;
     }
   }
 {%- endstyle -%}
@@ -63,13 +71,26 @@
                 {% endif %}
               >
                 {%- if block.settings.button_label != blank -%}
+                  <style>
+                    a.btn--1{
+                      background-color: {{ block.settings.btn_bg_color_1 }};
+                      color: {{ block.settings.btn_text_color_1 }};
+                      border: 1px solid {{ block.settings.btn_border_color_1 }};
+                      transition: all 0.3s ease-in-out;
+                    }
+                    a.btn--1:hover{
+                      background-color: {{ block.settings.btn_bg_hover_color_1 }};
+                      color: {{ block.settings.btn_text_hover_color_1 }};
+                      border: 1px solid {{ block.settings.btn_border_hover_color_1 }};
+                    }
+                  </style>
                   <a
                     {% if block.settings.button_link == blank %}
                       role="link" aria-disabled="true"
                     {% else %}
                       href="{{ block.settings.button_link }}"
                     {% endif %}
-                    class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
+                    class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %} btn--1"
                   >
                     {{- block.settings.button_label | escape -}}
                   </a>
@@ -91,6 +112,66 @@
         {%- endfor -%}
       </div>
     </div>
+    {%- for block in section.blocks -%}
+      {%- case block.type -%}
+        {%- when 'image' -%}
+          <div class="image-container">
+            {% if block.settings.desktop_image %}
+              <img
+                srcset="{{ block.settings.desktop_image | image_url: width: 1400, height: 1400 }}"
+                src="{{ block.settings.desktop_image | image_url: width: 1400, height: 1400 }}"
+                alt=""
+                class="img--desktop{% if block.settings.mobile_image %} mobile-active{% endif %}"
+                loading="lazy"
+              >
+            {% endif %}
+
+            {% if block.settings.mobile_image %}
+              <img
+                srcset="{{ block.settings.mobile_image | image_url: width: 400, height: 400 }}"
+                src="{{ block.settings.mobile_image | image_url: width: 400, height: 400 }}"
+                alt=""
+                class="img--mobile"
+                loading="lazy"
+              >
+            {% endif %}
+          </div>
+        {%- when 'video' -%}
+          <div class="video-container">
+            {% if block.settings.desktop_video %}
+              <video
+                data-lazy-video=""
+                playsinline=""
+                loop=""
+                data-video-autoplay=""
+                autoplay=""
+                muted=""
+                title=""
+                class="video--desktop{% if block.settings.mobile_video %}  mobile-active{% endif %}"
+              >
+                <source src="{{ block.settings.desktop_video }}" data-src="{{ block.settings.desktop_video }}">
+                Sorry, your browser doesn't support embedded videos.
+              </video>
+            {% endif %}
+
+            {% if block.settings.mobile_video %}
+              <video
+                data-lazy-video=""
+                playsinline=""
+                loop=""
+                data-video-autoplay=""
+                autoplay=""
+                muted=""
+                title=""
+                class="video--mobile"
+              >
+                <source src="{{ block.settings.mobile_video }}" data-src="{{ block.settings.mobile_video }}">
+                Sorry, your browser doesn't support embedded videos.
+              </video>
+            {% endif %}
+          </div>
+      {%- endcase -%}
+    {%- endfor -%}
   </div>
 </div>
 
@@ -148,7 +229,13 @@
       "type": "color_scheme",
       "id": "color_scheme",
       "label": "t:sections.all.colors.label",
-      "default": "scheme-1"
+      "default": "background-1"
+    },
+    {
+      "type": "color",
+      "id": "color_text",
+      "label": "Text color",
+      "default": "#000000"
     },
     {
       "type": "checkbox",
@@ -305,6 +392,36 @@
           "label": "t:sections.rich-text.blocks.buttons.settings.button_style_secondary_1.label"
         },
         {
+          "type": "color",
+          "id": "btn_bg_color_1",
+          "label": "Button Background Color 1"
+        },
+        {
+          "type": "color",
+          "id": "btn_border_color_1",
+          "label": "Button Border Color 1"
+        },
+        {
+          "type": "color",
+          "id": "btn_text_color_1",
+          "label": "Button Text Color 1"
+        },
+        {
+          "type": "color",
+          "id": "btn_bg_hover_color_1",
+          "label": "Button Background Hover Color 1"
+        },
+        {
+          "type": "color",
+          "id": "btn_border_hover_color_1",
+          "label": "Button Border Hover Color 1"
+        },
+        {
+          "type": "color",
+          "id": "btn_text_hover_color_1",
+          "label": "Button Text Hover Color 1"
+        },
+        {
           "type": "text",
           "id": "button_label_2",
           "label": "t:sections.rich-text.blocks.buttons.settings.button_label_2.label",
@@ -320,6 +437,70 @@
           "id": "button_style_secondary_2",
           "default": false,
           "label": "t:sections.rich-text.blocks.buttons.settings.button_style_secondary_2.label"
+        },
+        {
+          "type": "color",
+          "id": "btn_bg_color_2",
+          "label": "Button Background Color 2"
+        },
+        {
+          "type": "color",
+          "id": "btn_border_color_2",
+          "label": "Button Border Color 2"
+        },
+        {
+          "type": "color",
+          "id": "btn_text_color_2",
+          "label": "Button Text Color 2"
+        },
+        {
+          "type": "color",
+          "id": "btn_bg_hover_color_2",
+          "label": "Button Background Hover Color 2"
+        },
+        {
+          "type": "color",
+          "id": "btn_border_hover_color_2",
+          "label": "Button Border Hover Color 2"
+        },
+        {
+          "type": "color",
+          "id": "btn_text_hover_color_2",
+          "label": "Button Text Hover Color 2"
+        }
+      ]
+    },
+    {
+      "type": "image",
+      "name": "Image",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "desktop_image",
+          "label": "Desktop Image"
+        },
+        {
+          "type": "image_picker",
+          "id": "mobile_image",
+          "label": "Mobile Image"
+        }
+      ]
+    },
+    {
+      "type": "video",
+      "name": "Video",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "url",
+          "id": "desktop_video",
+          "label": "Desktop Video"
+        },
+        {
+          "type": "url",
+          "id": "mobile_video",
+          "label": "Mobile Video"
         }
       ]
     }
