PErmitir que la seleccion de color aunque no este disponible puedas verlo

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -296,7 +296,7 @@ variant-selects {
 }
 
 .product-form__input label[data-color].disabled {
-  pointer-events: none !important;
+  /*pointer-events: none !important;*/
 }
 
 .product-form__input label[data-color].disabled::after {
